# wav2krz

./: .gitignore  README.md  __init__.py  __main__.py  cli.py  converter.py  memory_bank.md  pyproject.toml
examples/: drumset.txt  drumset_multi.txt  instrument.txt  instrument_multi.txt
krz/: __init__.py  hash.py  header.py  keymap.py  program.py  sample.py  writer.py
src/wav2krz/: __main__.py  cli.py  converter.py  exceptions.py
src/wav2krz/krz/: __init__.py  for_templates.py  for_writer.py  keymap.py  program.py  sample.py  writer.py
src/wav2krz/wav/: __init__.py  parser.py
tests/: dump_test_file.py  helpers.py  test_converter.py  test_for_writer.py  test_keymap.py  test_krz_structures.py  test_wav_parser.py
wav/: __init__.py  parser.py
